feat: classes for animation a fade and slide

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -108,3 +108,31 @@ html {
   scrollbar-width: thin;
   scrollbar-color: #000000 #f1f1f1;
 }
+
+@theme {
+  --animate-all: transition-all duration-200 ease-in-out;
+  --animate-fadeInSlideUp: fadeInSlideUp 0.3s;
+  --animate-fadeInSlideDown: fadeInSlideDown 0.3s;
+
+  @keyframes fadeInSlideUp {
+    0% {
+      opacity: 0;
+      transform: translateY(20%);
+    }
+    100% {
+      opacity: 1;
+      transform: translateY(0%);
+    }
+  }
+
+  @keyframes fadeInSlideDown {
+    0% {
+      opacity: 0;
+      transform: translateY(-20%);
+    }
+    100% {
+      opacity: 1;
+      transform: translateY(0%);
+    }
+  }
+}
